--- a/html/beranda.html
+++ b/html/beranda.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio</title>
+    <title>Portofolio Ahmad Tajudin</title>
     <link rel="stylesheet" href="../css/beranda.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -13,13 +13,14 @@
     <header class="header">
         <div class="container">
             <div class="site-title">
-                <div class="chat-trigger" id="chat-trigger">
-                    <img src="../img/Graident Ai Robot.png" alt="Chat AI">
+                <div class="chat-trigger" id="chat-trigger" aria-label="Buka Chat AI"> <img
+                        src="../img/Graident Ai Robot.png" alt="Chat AI">
                 </div>
             </div>
             <nav class="main-nav">
                 <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i> </button>
+                    <i class="fas fa-bars"></i>
+                </button>
                 <ul class="nav-list" id="nav-list">
                     <li><a href="#about">Tentang Saya</a></li>
                     <li><a href="#projects">Proyek</a></li>
@@ -33,13 +34,14 @@
     <section id="hero" class="hero-section">
         <div class="container">
             <div class="hero-content">
-                <img src="../img/ahmad tajudin.jpg" alt="Foto Profil Anda" class="profile-photo fade-in-slide-up">
+                <img src="../img/Ahmad Tajudin.jpg" alt="Foto Profil Ahmad Tajudin"
+                    class="profile-photo fade-in-slide-up">
                 <div class="hero-text">
                     <h1 class="fade-in-slide-up">Halo, Saya Ahmad Tajudin</h1>
                     <p class="fade-in-slide-up">Teknik Informatika, Multimedia.</p>
                 </div>
             </div>
-            <a href="#projects" class="btn fade-in-slide-up">Proyek Saya</a>
+            <a href="#projects" class="btn fade-in-slide-up">Lihat Proyek Saya</a>
         </div>
     </section>
 
@@ -47,19 +49,16 @@
         <div class="container">
             <h2 class="fade-in-slide-up">Tentang Saya</h2>
             <p class="fade-in-slide-up">
-                Saya adalah mahasiswa program studi Teknik Informatika di Politeknik TEDC
-                Bandung.
-                Berbekal latar belakang pendidikan di SMK dengan jurusan Multimedia,
-                saya memiliki keahlian visual dan kreatif
-                dengan pemahaman mendalam tentang teknologi dan pengembangan sistem.
-                Pengalaman saya di Multimedia memberikan fondasi yang kuat dalam
-                desain grafis, videografi, dan animasi.
-                <br>
-                <br>
-                kini saya meng gabungkan dengan keterampilan yang saya pelajari di Teknik Informatika,
-                seperti pengembangan web/aplikasi, basis data, logika algoritma dan desain ui/ux.
-                Melalui portofolio ini, saya menampilkan proyek yang menunjukkan kemampuan saya
-                untuk membuat dunia desain dan teknologi, menciptakan website yang fungsional dan estetis.
+                Saya adalah mahasiswa program studi Teknik Informatika di Politeknik TEDC Bandung. Berbekal latar
+                belakang pendidikan di SMK dengan jurusan Multimedia, saya memiliki keahlian visual dan kreatif dengan
+                pemahaman mendalam tentang teknologi dan pengembangan sistem. Pengalaman saya di Multimedia memberikan
+                fondasi yang kuat dalam desain grafis, videografi, dan animasi.
+            </p>
+            <p class="fade-in-slide-up">
+                Kini saya menggabungkan dengan keterampilan yang saya pelajari di Teknik Informatika, seperti
+                pengembangan web/aplikasi, basis data, logika algoritma, dan desain UI/UX. Melalui portofolio ini, saya
+                menampilkan proyek yang menunjukkan kemampuan saya untuk menciptakan solusi yang menggabungkan desain
+                dan teknologi, menghasilkan website yang fungsional dan estetis.
             </p>
         </div>
     </section>
@@ -69,27 +68,27 @@
             <h2 class="fade-in-slide-up">Proyek Pilihan</h2>
             <div class="project-grid">
                 <div class="project-item fade-in-slide-up">
-                    <img src="../img/skill 0.png" alt="Proyek 1">
+                    <img src="../img/skill 0.png" alt="Proyek Desain Grafis">
                     <div class="project-info">
                         <h3>Desain Grafis</h3>
-                        <p>Deskripsi singkat tentang proyek ini.</p>
-                        <a href="#" class="link">Lihat Detail</a>
+                        <p>Kumpulan karya desain grafis yang mencakup poster, logo, dan branding.</p> <a
+                            href="../html/desain_grafis.html" class="link">Lihat Detail</a>
                     </div>
                 </div>
                 <div class="project-item fade-in-slide-up">
-                    <img src="../img/skill 1.png" alt="Proyek 2">
+                    <img src="../img/skill 1.png" alt="Proyek Video Editing">
                     <div class="project-info">
                         <h3>Video Editing</h3>
-                        <p>Deskripsi singkat tentang proyek ini.</p>
-                        <a href="#" class="link">Lihat Detail</a>
+                        <p>Contoh hasil editing video, termasuk motion graphics dan color grading.</p> <a
+                            href="../html/video_editing.html" class="link">Lihat Detail</a>
                     </div>
                 </div>
                 <div class="project-item fade-in-slide-up">
-                    <img src="../img/skill 2.png" alt="Proyek 3">
+                    <img src="../img/skill 2.png" alt="Proyek Animasi">
                     <div class="project-info">
                         <h3>Animasi</h3>
-                        <p>Deskripsi singkat tentang proyek ini.</p>
-                        <a href="#" class="link">Lihat Detail</a>
+                        <p>Portofolio animasi 2D dan 3D, menunjukkan kemampuan dalam storytelling visual.</p> <a
+                            href="../html/animasi.html" class="link">Lihat Detail</a>
                     </div>
                 </div>
             </div>
@@ -100,33 +99,89 @@
         <div class="container">
             <h2 class="fade-in-slide-up">Keahlian Saya</h2>
             <div class="skills-list">
-                <span class="skill-tag fade-in-slide-up">HTML</span>
-                <span class="skill-tag fade-in-slide-up">CSS</span>
-                <span class="skill-tag fade-in-slide-up">JavaScript</span>
-                <span class="skill-tag fade-in-slide-up">Node.js</span>
-                <span class="skill-tag fade-in-slide-up">MongoDB</span>
-                <span class="skill-tag fade-in-slide-up">Responsif Design</span>
-                <span class="skill-tag fade-in-slide-up">Desain Grafis</span>
-                <span class="skill-tag fade-in-slide-up">Video Editing</span>
-                <span class="skill-tag fade-in-slide-up">Animasi</span>
+                <span class="skill-tag fade-in-slide-up">
+                    <img src="../img/icons/html_icon.png" alt="HTML Icon"> HTML
+                </span>
+                <span class="skill-tag fade-in-slide-up">
+                    <img src="../img/icons/css_icon.png" alt="CSS Icon"> CSS
+                </span>
+                <span class="skill-tag fade-in-slide-up">
+                    <img src="../img/icons/js_icon.png" alt="JavaScript Icon"> JavaScript
+                </span>
+                <span class="skill-tag fade-in-slide-up">
+                    <img src="../img/icons/node_icon.png" alt="Node.js Icon"> Node.js
+                </span>
+                <span class="skill-tag fade-in-slide-up">
+                    <img src="../img/icons/mongo_icon.png" alt="MongoDB Icon"> MongoDB
+                </span>
+                <span class="skill-tag fade-in-slide-up">
+                    <img src="../img/icons/responsive_icon.png" alt="Responsive Design Icon"> Responsive Design
+                </span>
+                <span class="skill-tag fade-in-slide-up">
+                    <img src="../img/icons/design_icon.png" alt="Desain Grafis Icon"> Desain Grafis
+                </span>
+                <span class="skill-tag fade-in-slide-up">
+                    <img src="../img/icons/video_icon.png" alt="Video Editing Icon"> Video Editing
+                </span>
+                <span class="skill-tag fade-in-slide-up">
+                    <img src="../img/icons/animation_icon.png" alt="Animasi Icon"> Animasi
+                </span>
+                <span class="skill-tag fade-in-slide-up">
+                    <img src="../img/icons/uiux_icon.png" alt="UI/UX Design Icon"> UI/UX Design
+                </span>
+                <span class="skill-tag fade-in-slide-up">
+                    <img src="../img/icons/database_icon.png" alt="Database Icon"> Database Management
+                </span>
             </div>
         </div>
     </section>
 
+    <section id="games" class="projects-section animate-on-scroll">
+        <div class="container">
+            <h2 class="fade-in-slide-up">Game Favorit Saya</h2>
+            <div class="project-grid">
+                <div class="project-item fade-in-slide-up">
+                    <img src="../img/Mobile Legends.jpeg" alt="Game Mobile Legends">
+                    <div class="project-info">
+                        <h3>Mobile Legends: Bang Bang</h3>
+                        <p>Game MOBA mobile 5v5 yang sangat kompetitif dan membutuhkan strategi tim.</p>
+                    </div>
+                </div>
+                <div class="project-item fade-in-slide-up">
+                    <img src="../img/PUBG Battlegrounds.jpeg" alt="Game PUBG Mobile">
+                    <div class="project-info">
+                        <h3>PUBG Battlegrounds</h3>
+                        <p>Game battle royale yang seru dengan berbagai mode dan peta. Sangat menantang!</p>
+                    </div>
+                </div>
+                <div class="project-item fade-in-slide-up">
+                    <img src="../img/Valorant.jpeg" alt="Game Valorant">
+                    <div class="project-info">
+                        <h3>Valorant</h3>
+                        <p>First-person shooter taktis dari Riot Games dengan karakter unik dan kemampuan khusus.</p>
+                    </div>
+                </div>
+            </div>
+            <a href="../html/perbaikan.html" class="btn fade-in-slide-up" style="margin-top: 40px;">Lihat
+                Selengkapnya</a>
+        </div>
+    </section>
 
     <section id="contact" class="contact-section animate-on-scroll">
         <div class="container">
-            <h2 class="fade-in-slide-up">Social Media & Kontak Pribadi</h2>
-            <p class="fade-in-slide-up">Jika ada kesalahan website? Kirim saya pesan!</p>
-            <a href="mailto:ahmadtajudin1010@gmail.com" class="btn fade-in-slide-up">Kirim Email</a>
+            <h2 class="fade-in-slide-up">Hubungi Saya</h2>
+            <p class="fade-in-slide-up">Punya pertanyaan atau ingin berkolaborasi? Jangan ragu untuk menghubungi saya!
+            </p> <a
+                href="mailto:ahmadtajudin1010@gmail.com?subject=Pesan dari Portofolio Anda&body=Halo Ahmad Tajudin,%0A%0ASaya mengunjungi portofolio Anda dan ingin bertanya tentang..."
+                class="btn fade-in-slide-up">Kirim Email</a>
             <div class="social-links fade-in-slide-up">
-                <a href="https://www.youtube.com/@ahmadtajudin2927" class="social-icon"><i
-                        class="fab fa-youtube"></i></a>
-                <a href="https://www.instagram.com/ahmadtajudin_1010?igsh=MWx2a2duYmk3bm51aA==" class="social-icon"><i
-                        class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/share/1C4BsezTxs/" class="social-icon"><i
-                        class="fab fa-facebook"></i></a>
-                <a href="https://wa.me/6282295054180" class="social-icon"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.youtube.com/channel/YOUR_YOUTUBE_CHANNEL_ID" class="social-icon" target="_blank"
+                    aria-label="YouTube"><i class="fab fa-youtube"></i></a> <a
+                    href="https://www.instagram.com/ahmadtajudin_1010" class="social-icon" target="_blank"
+                    aria-label="Instagram"><i class="fab fa-instagram"></i></a> <a
+                    href="https://www.facebook.com/share/1C4BsezTxs/" class="social-icon" target="_blank"
+                    aria-label="Facebook"><i class="fab fa-facebook"></i></a> <a href="https://wa.me/6282295054180"
+                    class="social-icon" target="_blank" aria-label="WhatsApp"><i class="fab fa-tiktok"></i></a>
             </div>
         </div>
     </section>
@@ -135,22 +190,20 @@
         <div class="container">
             <p>© 2025 Ahmad Tajudin. Semua Hak Dilindungi.</p>
             <p class="footer-note">Dibangun dengan bantuan <img src="../img/google-gemini-icon.png"
-                    alt="Google Gemini Icon"> Gemini Ai
-            </p>
+                    alt="Google Gemini Icon"> Gemini AI</p>
         </div>
     </footer>
 
     <div class="chat-window" id="chat-window">
         <div class="chat-header">
             <span>Chat Bantuan AI</span>
-            <button class="close-chat" id="close-chat">×</button>
+            <button class="close-chat" id="close-chat" aria-label="Tutup Chat">×</button>
         </div>
         <div class="chat-body" id="chat-body">
-            <div class="message ai-message">Halo! Ada yang bisa saya bantu?</div>
+            <div class="message ai-message">Halo! Ada yang bisa saya bantu terkait portofolio ini?</div>
         </div>
         <div class="chat-footer">
-            <input type="text" id="chat-input" placeholder="Ketik pesan...">
-            <button id="send-chat">Kirim</button>
+            <input type="text" id="chat-input" placeholder="Ketik pesan Anda..."> <button id="send-chat">Kirim</button>
         </div>
     </div>
     <script src="../js/beranda.js"></script>
