--- a/html/beranda.html
+++ b/html/beranda.html
@@ -34,7 +34,7 @@
     <section id="hero" class="hero-section">
         <div class="container">
             <div class="hero-content">
-                <img src="../img/ahmad tajudin.jpg" alt="Foto Profil Ahmad Tajudin"
+                <img src="../img/profile.JPG" alt="Foto Profil Ahmad Tajudin"
                     class="profile-photo fade-in-slide-up">
                 <div class="hero-text">
                     <h1 class="fade-in-slide-up">Halo, Saya Ahmad Tajudin</h1>
