--- a/html/beranda.html
+++ b/html/beranda.html
@@ -72,7 +72,7 @@
                     <div class="project-info">
                         <h3>Desain Grafis</h3>
                         <p>Kumpulan karya desain grafis yang mencakup poster, logo, dan branding.</p> <a
-                            href="../html/desain_grafis.html" class="link">Lihat Detail</a>
+                            href="../html/perbaikan.html" class="link">Lihat Detail</a>
                     </div>
                 </div>
                 <div class="project-item fade-in-slide-up">
@@ -80,7 +80,7 @@
                     <div class="project-info">
                         <h3>Video Editing</h3>
                         <p>Contoh hasil editing video, termasuk motion graphics dan color grading.</p> <a
-                            href="../html/video_editing.html" class="link">Lihat Detail</a>
+                            href="../html/perbaikan.html" class="link">Lihat Detail</a>
                     </div>
                 </div>
                 <div class="project-item fade-in-slide-up">
@@ -88,7 +88,7 @@
                     <div class="project-info">
                         <h3>Animasi</h3>
                         <p>Portofolio animasi 2D dan 3D, menunjukkan kemampuan dalam storytelling visual.</p> <a
-                            href="../html/animasi.html" class="link">Lihat Detail</a>
+                            href="../html/perbaikan.html" class="link">Lihat Detail</a>
                     </div>
                 </div>
             </div>
