--- a/html/beranda.html
+++ b/html/beranda.html
@@ -25,7 +25,7 @@
                     <li><a href="#about">Tentang Saya</a></li>
                     <li><a href="#projects">Proyek</a></li>
                     <li><a href="#skills">Keahlian</a></li>
-                    <li><a href="html/games.html">Game Favorit</a></li> <!-- Link Game Favorit ditambahkan -->
+                    <li><a href="#game_favorite">Game Favorit</a></li> <!-- Link Game Favorit ditambahkan -->
                     <li><a href="#contact">Kontak</a></li>
                 </ul>
             </nav>
@@ -137,7 +137,7 @@
         </div>
     </section>
 
-    <section id="games" class="projects-section animate-on-scroll">
+    <section id="game_favorite" class="projects-section animate-on-scroll">
         <div class="container">
             <h2 class="fade-in-slide-up">Game Favorit Saya</h2>
             <div class="project-grid">
