--- a/html/beranda.html
+++ b/html/beranda.html
@@ -137,7 +137,7 @@
         </div>
     </section>
 
-    <section id="game_favorite" class="projects-section animate-on-scroll">
+    <section id="game_favorite" class="skills-section animate-on-scroll">
         <div class="container">
             <h2 class="fade-in-slide-up">Game Favorit Saya</h2>
             <div class="project-grid">
