--- a/html/beranda.html
+++ b/html/beranda.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="hero-content">
                 <!-- Mempertahankan profile.JPG sebagai foto profil -->
-                <img src="..img/ahmad_tajudin.jpg" alt="Foto Profil Ahmad Tajudin" class="profile-photo fade-in-slide-up">
+                <img src="..img/profile.jpg" alt="Foto Profil Ahmad Tajudin" class="profile-photo fade-in-slide-up">
                 <div class="hero-text">
                     <h1 class="fade-in-slide-up">Halo, Saya Ahmad Tajudin</h1>
                     <p class="fade-in-slide-up">Teknik Informatika, Multimedia.</p>
