Update beranda.html link and add new projects page files

--- a/html/beranda.html
+++ b/html/beranda.html
@@ -42,7 +42,7 @@
                     <p class="fade-in-slide-up">Teknik Informatika, Multimedia.</p>
                 </div>
             </div>
-            <a href="../html/perbaikan.html" class="btn fade-in-slide-up">Lihat Proyek Saya</a>
+            <a href="../html/projects.html" class="btn fade-in-slide-up">Lihat Proyek Saya</a>
         </div>
     </section>
 
