Update beranda.html link and add new projects page files

--- a/html/projects.html
+++ b/html/projects.html
@@ -93,7 +93,9 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Ahmad Tajudin. Semua Hak Dilindungi.</p>
+            <p>© 2025 Ahmad Tajudin. Semua Hak Dilindungi.</p>
+            <p class="footer-note">Dibangun dengan bantuan <img src="../img/google-gemini-icon.png"
+                    alt="Google Gemini Icon"> Gemini AI</p>
         </div>
     </footer>
 
