Revise projects.html header navigation

--- a/html/projects.html
+++ b/html/projects.html
@@ -18,18 +18,15 @@
                     <i class="fas fa-arrow-left"></i> Beranda
                 </a>
             </div>
+            <!-- Bagian navigasi utama dihapus sesuai permintaan -->
+            <!-- Tombol menu toggle juga akan tidak berfungsi tanpa nav-list,
+                tapi untuk menjaga responsivitas tetap rapi, kita biarkan tombolnya.
+                Jika Anda ingin tombol berfungsi untuk sesuatu yang lain di masa depan, bisa ditambahkan JS. -->
             <nav class="main-nav">
-                <!-- Tombol menu toggle untuk mobile -->
                 <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation">
                     <i class="fas fa-bars"></i>
                 </button>
-                <ul class="nav-list" id="nav-list">
-                    <li><a href="beranda.html#about">Tentang Saya</a></li>
-                    <li><a href="beranda.html#projects">Proyek Pilihan</a></li>
-                    <li><a href="beranda.html#skills">Keahlian</a></li>
-                    <li><a href="beranda.html#game_favorite">Game Favorit</a></li>
-                    <li><a href="beranda.html#contact">Kontak</a></li>
-                </ul>
+                <!-- Nav-list dihapus -->
             </nav>
         </div>
     </header>
@@ -93,9 +90,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>© 2025 Ahmad Tajudin. Semua Hak Dilindungi.</p>
-            <p class="footer-note">Dibangun dengan bantuan <img src="../img/google-gemini-icon.png"
-                    alt="Google Gemini Icon"> Gemini AI</p>
+            <p>&copy; 2025 Ahmad Tajudin. Semua Hak Dilindungi.</p>
         </div>
     </footer>
 
