Update projects.html categories with professional alternatives

--- a/html/projects.html
+++ b/html/projects.html
@@ -19,14 +19,10 @@
                 </a>
             </div>
             <!-- Bagian navigasi utama dihapus sesuai permintaan -->
-            <!-- Tombol menu toggle juga akan tidak berfungsi tanpa nav-list,
-                tapi untuk menjaga responsivitas tetap rapi, kita biarkan tombolnya.
-                Jika Anda ingin tombol berfungsi untuk sesuatu yang lain di masa depan, bisa ditambahkan JS. -->
             <nav class="main-nav">
                 <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation">
                     <i class="fas fa-bars"></i>
                 </button>
-                <!-- Nav-list dihapus -->
             </nav>
         </div>
     </header>
@@ -46,16 +42,17 @@
                     </div>
                 </a>
 
-                <!-- Kategori Game -->
-                <a href="games.html" class="category-item fade-in-slide-up">
-                    <img src="https://placehold.co/400x250/B8F1CC/000000?text=Game" alt="Game">
+                <!-- Kategori Aplikasi & Tools Baru -->
+                <a href="#" class="category-item fade-in-slide-up">
+                    <img src="https://placehold.co/400x250/C0C0C0/000000?text=Aplikasi+dan+Tools"
+                        alt="Aplikasi dan Tools">
                     <div class="category-info">
-                        <h3>Game</h3>
-                        <p>Temukan game-game favorit dan proyek terkait pengembangan game.</p>
+                        <h3>Aplikasi & Tools</h3>
+                        <p>Kumpulan pengembangan aplikasi kustom, utilitas, atau perangkat lunak.</p>
                     </div>
                 </a>
 
-                <!-- Kategori Desain Grafis -->
+                <!-- Kategori Desain Grafis (Project Desain) -->
                 <a href="desain_grafis.html" class="category-item fade-in-slide-up">
                     <img src="https://placehold.co/400x250/FFD9A0/000000?text=Desain+Grafis" alt="Desain Grafis">
                     <div class="category-info">
@@ -64,21 +61,31 @@
                     </div>
                 </a>
 
-                <!-- Kategori Video Editing -->
-                <a href="video_editing.html" class="category-item fade-in-slide-up">
-                    <img src="https://placehold.co/400x250/FFB3BA/000000?text=Video+Editing" alt="Video Editing">
-                    <div class="category-info">
-                        <h3>Video Editing</h3>
-                        <p>Contoh hasil editing video, motion graphics, dan color grading.</p>
-                    </div>
-                </a>
-
-                <!-- Kategori Animasi -->
+                <!-- Kategori Animasi (Project Animasi) -->
                 <a href="animasi.html" class="category-item fade-in-slide-up">
                     <img src="https://placehold.co/400x250/C6A0FF/000000?text=Animasi" alt="Animasi">
                     <div class="category-info">
                         <h3>Animasi</h3>
                         <p>Portofolio animasi 2D dan 3D dengan storytelling visual yang kuat.</p>
+                    </div>
+                </a>
+
+                <!-- Kategori Produksi Video Digital Baru -->
+                <a href="#" class="category-item fade-in-slide-up">
+                    <img src="https://placehold.co/400x250/D2B48C/000000?text=Produksi+Video"
+                        alt="Produksi Video Digital">
+                    <div class="category-info">
+                        <h3>Produksi Video Digital</h3>
+                        <p>Contoh karya videografi, film pendek, atau proyek produksi video lainnya.</p>
+                    </div>
+                </a>
+
+                <!-- Kategori Game (disisipkan kembali karena relevan dan sudah ada link games.html) -->
+                <a href="games.html" class="category-item fade-in-slide-up">
+                    <img src="https://placehold.co/400x250/B8F1CC/000000?text=Game" alt="Game">
+                    <div class="category-info">
+                        <h3>Game</h3>
+                        <p>Temukan game-game favorit dan proyek terkait pengembangan game.</p>
                     </div>
                 </a>
 
@@ -91,6 +98,8 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 Ahmad Tajudin. Semua Hak Dilindungi.</p>
+            <p class="footer-note">Dibangun dengan bantuan <img src="../img/google-gemini-icon.png"
+                    alt="Google Gemini Icon"> Gemini AI</p>
         </div>
     </footer>
 
