--- a/html/projects.html
+++ b/html/projects.html
@@ -34,7 +34,7 @@
 
             <div class="category-grid">
                 <!-- Kategori Toko Online -->
-                <a href="#" class="category-item fade-in-slide-up">
+                <a href="perbaikan.html" class="category-item fade-in-slide-up">
                     <img src="https://placehold.co/400x250/A0E6FF/000000?text=Toko+Online" alt="Toko Online">
                     <div class="category-info">
                         <h3>Toko Online</h3>
@@ -43,7 +43,7 @@
                 </a>
 
                 <!-- Kategori Aplikasi & Tools Baru -->
-                <a href="#" class="category-item fade-in-slide-up">
+                <a href="perbaikan.html" class="category-item fade-in-slide-up">
                     <img src="https://placehold.co/400x250/C0C0C0/000000?text=Aplikasi+dan+Tools"
                         alt="Aplikasi dan Tools">
                     <div class="category-info">
@@ -53,7 +53,7 @@
                 </a>
 
                 <!-- Kategori Desain Grafis (Project Desain) -->
-                <a href="desain_grafis.html" class="category-item fade-in-slide-up">
+                <a href="perbaikan.html" class="category-item fade-in-slide-up">
                     <img src="https://placehold.co/400x250/FFD9A0/000000?text=Desain+Grafis" alt="Desain Grafis">
                     <div class="category-info">
                         <h3>Desain Grafis</h3>
@@ -62,7 +62,7 @@
                 </a>
 
                 <!-- Kategori Animasi (Project Animasi) -->
-                <a href="animasi.html" class="category-item fade-in-slide-up">
+                <a href="perbaikan.html" class="category-item fade-in-slide-up">
                     <img src="https://placehold.co/400x250/C6A0FF/000000?text=Animasi" alt="Animasi">
                     <div class="category-info">
                         <h3>Animasi</h3>
@@ -71,7 +71,7 @@
                 </a>
 
                 <!-- Kategori Produksi Video Digital Baru -->
-                <a href="#" class="category-item fade-in-slide-up">
+                <a href="perbaikan.html" class="category-item fade-in-slide-up">
                     <img src="https://placehold.co/400x250/D2B48C/000000?text=Produksi+Video"
                         alt="Produksi Video Digital">
                     <div class="category-info">
@@ -81,7 +81,7 @@
                 </a>
 
                 <!-- Kategori Game (disisipkan kembali karena relevan dan sudah ada link games.html) -->
-                <a href="games.html" class="category-item fade-in-slide-up">
+                <a href="perbaikan.html" class="category-item fade-in-slide-up">
                     <img src="https://placehold.co/400x250/B8F1CC/000000?text=Game" alt="Game">
                     <div class="category-info">
                         <h3>Game</h3>
