Update all projects.html category links to perbaikan.html

--- a/html/projects.html
+++ b/html/projects.html
@@ -80,7 +80,7 @@
                     </div>
                 </a>
 
-                <!-- Kategori Game (disisipkan kembali karena relevan dan sudah ada link games.html) -->
+                <!-- Kategori Game -->
                 <a href="perbaikan.html" class="category-item fade-in-slide-up">
                     <img src="https://placehold.co/400x250/B8F1CC/000000?text=Game" alt="Game">
                     <div class="category-info">
