Revise toko-online.css for a more e-commerce like product display

--- a/html/projects.html
+++ b/html/projects.html
@@ -34,7 +34,7 @@
 
             <div class="category-grid">
                 <!-- Kategori Toko Online -->
-                <a href="perbaikan.html" class="category-item fade-in-slide-up">
+                <a href="toko-online.html" class="category-item fade-in-slide-up">
                     <img src="https://placehold.co/400x250/A0E6FF/000000?text=Toko+Online" alt="Toko Online">
                     <div class="category-info">
                         <h3>Toko Online</h3>
@@ -49,6 +49,15 @@
                     <div class="category-info">
                         <h3>Aplikasi & Tools</h3>
                         <p>Kumpulan pengembangan aplikasi kustom, utilitas, atau perangkat lunak.</p>
+                    </div>
+                </a>
+
+                <!-- Kategori Game -->
+                <a href="perbaikan.html" class="category-item fade-in-slide-up">
+                    <img src="https://placehold.co/400x250/B8F1CC/000000?text=Game" alt="Game">
+                    <div class="category-info">
+                        <h3>Game</h3>
+                        <p>Temukan game-game favorit dan proyek terkait pengembangan game.</p>
                     </div>
                 </a>
 
@@ -77,15 +86,6 @@
                     <div class="category-info">
                         <h3>Produksi Video Digital</h3>
                         <p>Contoh karya videografi, film pendek, atau proyek produksi video lainnya.</p>
-                    </div>
-                </a>
-
-                <!-- Kategori Game -->
-                <a href="perbaikan.html" class="category-item fade-in-slide-up">
-                    <img src="https://placehold.co/400x250/B8F1CC/000000?text=Game" alt="Game">
-                    <div class="category-info">
-                        <h3>Game</h3>
-                        <p>Temukan game-game favorit dan proyek terkait pengembangan game.</p>
                     </div>
                 </a>
 
