Remove menu toggle button and related CSS from projects.html and toko-online.html

--- a/html/projects.html
+++ b/html/projects.html
@@ -18,11 +18,9 @@
                     <i class="fas fa-arrow-left"></i> Beranda
                 </a>
             </div>
-            <!-- Bagian navigasi utama dihapus sesuai permintaan -->
+            <!-- Bagian navigasi utama, tombol toggle dihapus -->
             <nav class="main-nav">
-                <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
-                </button>
+                <!-- Tombol menu toggle telah dihapus -->
             </nav>
         </div>
     </header>
