--- a/html/toko-online.html
+++ b/html/toko-online.html
@@ -19,10 +19,7 @@
                 </a>
             </div>
             <nav class="main-nav">
-                <!-- Tombol menu toggle untuk mobile, jika diperlukan di masa depan -->
-                <button class="menu-toggle" id="menu-toggle" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
-                </button>
+                <!-- Tombol menu toggle telah dihapus -->
                 <!-- Tombol untuk membuka modal login/daftar -->
                 <button id="auth-button" class="btn-auth">Login / Daftar</button>
             </nav>
@@ -149,7 +146,7 @@
                 <input type="password" id="register-confirm-password" placeholder="Konfirmasi Password" required
                     autocomplete="new-password">
                 <!-- Anda bisa menambahkan input untuk 'Pembeli' atau 'Penjual' di sini nanti,
-                tapi untuk sekarang, kita fokus pada pendaftaran dasar. -->
+                     tapi untuk sekarang, kita fokus pada pendaftaran dasar. -->
                 <button type="submit" id="register-submit-btn">Daftar</button>
             </form>
             <p id="register-message" class="auth-message"></p>
