--- a/html/toko-online.html
+++ b/html/toko-online.html
@@ -19,8 +19,13 @@
                 </a>
             </div>
             <nav class="main-nav">
-                <!-- Tombol untuk membuka modal login/daftar -->
-                <button id="auth-button" class="btn-auth">Login / Daftar</button>
+                <!-- Tombol untuk membuka modal login/daftar (visible when logged out) -->
+                <button id="auth-button-login" class="btn-auth">Login / Daftar</button>
+
+                <!-- Tombol untuk membuka modal profil (visible when logged in) -->
+                <button id="auth-button-profile" class="btn-auth" style="display: none;">Profil Saya</button>
+                <!-- Tombol Logout (visible when logged in) -->
+                <button id="auth-button-logout" class="btn-auth btn-logout" style="display: none;">Logout</button>
             </nav>
         </div>
     </header>
@@ -162,6 +167,63 @@
             <p class="auth-switch">Sudah punya akun? <span id="switch-to-login">Login di sini</span></p>
         </div>
     </div>
+
+    <!-- Bagian MODAL PROFIL PENGGUNA BARU -->
+    <div id="profile-modal" class="auth-modal">
+        <div class="auth-modal-content">
+            <span class="close-button">&times;</span>
+            <h2>Profil Saya</h2>
+            <div id="profile-display">
+                <p>Email: <span id="profile-email"></span></p>
+                <p>Peran: <span id="profile-role"></span></p>
+                <!-- Anda bisa menambahkan lebih banyak info profil di sini -->
+                <button id="edit-profile-btn" class="btn-auth">Edit Profil</button>
+                <button id="change-password-btn" class="btn-auth">Ubah Password</button>
+                <button id="delete-account-btn" class="btn-auth btn-delete">Hapus Akun</button>
+            </div>
+
+            <!-- Formulir Edit Profil (awalnya tersembunyi) -->
+            <form id="profile-edit-form" style="display:none;">
+                <h3>Edit Informasi Profil</h3>
+                <input type="email" id="edit-email" placeholder="Email Baru" autocomplete="email">
+                <!-- Untuk saat ini, peran tidak bisa diedit langsung dari sini.
+                     Jika Anda ingin mengizinkan perubahan peran, ini akan lebih kompleks
+                     karena mungkin melibatkan hak akses dan validasi backend. -->
+                <button type="submit" class="btn-auth">Simpan Perubahan</button>
+                <button type="button" class="btn-auth btn-cancel" id="cancel-edit-btn">Batal</button>
+                <p id="edit-profile-message" class="auth-message"></p>
+            </form>
+
+            <!-- Formulir Ubah Password (awalnya tersembunyi) -->
+            <form id="change-password-form" style="display:none;">
+                <h3>Ubah Password</h3>
+                <p class="reauth-notice">Untuk keamanan, Anda mungkin perlu login ulang.</p>
+                <input type="password" id="current-password-reauth" placeholder="Password Saat Ini"
+                    autocomplete="current-password">
+                <input type="password" id="new-password" placeholder="Password Baru" autocomplete="new-password">
+                <input type="password" id="confirm-new-password" placeholder="Konfirmasi Password Baru"
+                    autocomplete="new-password">
+                <button type="submit" class="btn-auth">Ubah Password</button>
+                <button type="button" class="btn-auth btn-cancel" id="cancel-password-change-btn">Batal</button>
+                <p id="change-password-message" class="auth-message"></p>
+            </form>
+
+            <!-- Konfirmasi Hapus Akun (awalnya tersembunyi) -->
+            <div id="delete-account-confirmation" style="display:none;">
+                <h3>Konfirmasi Hapus Akun</h3>
+                <p class="warning-text">Anda akan menghapus akun secara permanen. Tindakan ini tidak dapat dibatalkan.
+                </p>
+                <p class="reauth-notice">Untuk melanjutkan, silakan login ulang dengan password Anda.</p>
+                <input type="password" id="delete-password-reauth" placeholder="Password Anda"
+                    autocomplete="current-password">
+                <button class="btn-auth btn-delete" id="confirm-delete-account-btn">Konfirmasi Hapus</button>
+                <button type="button" class="btn-auth btn-cancel" id="cancel-delete-btn">Batal</button>
+                <p id="delete-account-message" class="auth-message"></p>
+            </div>
+
+        </div>
+    </div>
+
 
     <!-- Panggil JavaScript untuk halaman toko online dan otentikasi -->
     <script src="../js/toko-online.js"></script>
